[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scenes/title_screen.gd" id="1_title"]
[ext_resource type="Texture2D" uid="uid://c8e86pmrwbub4" path="res://maps/backgrounds/SnowMountainsSky.png" id="2_sky"]
[ext_resource type="AudioStream" uid="uid://ca7j6ywp01uu4" path="res://music/jewels.ogg" id="3_music"]

[sub_resource type="Animation" id="Animation_intro"]
resource_name = "intro"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fadeout"]
resource_name = "fade_out"
length = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.0),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Music:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.0),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_title"]
_data = {
"intro": SubResource("Animation_intro"),
"fade_out": SubResource("Animation_fadeout")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_title")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sky")
expand_mode = 1

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 100.0
offset_bottom = 250.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 9
theme_override_font_sizes/font_size = 64
text = "Lettre à Béa"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 260.0
offset_bottom = 320.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.5)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 22
text = "Notre histoire en avions de papier"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PromptLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 28
text = "Appuie pour commencer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CopyrightLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -35.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 0.5)
text = "©Akrib 2024 — GPLv3"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_title")
}
autoplay = "intro"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_music")
autoplay = true
volume_db = -5.0
